Sat Jan 18 11:24:00 2003  Gary Wong  <gtw@gnu.org>

	* render.c (DrawChequers): Fix cosmetic bug with more than 3 chequers
	on bar (reported by Nardy Pillards).

Fri Jan 17 16:36:08 2003  Gary Wong  <gtw@gnu.org>

	* speed.c (CommandCalibrate): New function.  Measure evaluation speed,
	so (in future) we can estimate how long analysis/rollouts/etc. will
	take.
	* gtkgame.c (GTKShowCalibration): New function.
	* set.c (CommandSetCalibration): New function.
	* show.c (CommandShowCalibration): New function.
	
	* gtkgame.c (DeleteGame): Return TRUE, to stop GTK event propagation.

Fri Jan 17 12:52:49 2003  Gary Wong  <gtw@gnu.org>

	* gtkboard.c (board_quick_edit): Allow clicking on dice area to
	set dice (suggested by Nardy Pillards).
	(key_press): Make clicking on the label chequer set
	the appropriate player on roll.

Fri Jan 17 12:08:43 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.c (OptionsPages): Bug fixes for Crawford rule sensitivity
	and MWC percentage tooltips (reported by Ian Shaw).

Thu Jan 16 21:54:21 2003  Gary Wong  <gtw@gnu.org>

	* set.c (CommandSetMatchLength): New function.  Allow specifying
	default match length.
	* show.c (CommandShowMatchLength): New function.

Thu Jan 16 15:43:11 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.c (OptionsPages): New function.  Rearrange options into
	a notebook, so there is room for more verbose descriptions, and
	add tooltips to all options.  Add options controlling sound
	effects (not yet complete).

Thu Jan 16 12:27:05 2003  Gary Wong  <gtw@gnu.org>

	* gtkgame.c (GTKShowPath): Add missing .BKG entry.

Wed Jan 15 15:32:39 2003  Gary Wong  <gtw@gnu.org>

	* gnubg.c (ExportGameJF): Revert previous patch; JF .mat format
	shouldn't be internationalised.

Wed Jan 15 14:44:05 2003  Gary Wong  <gtw@gnu.org>

	* gnubg.c, set.c, show.c: I18N plural patches from TAKAHASHI Kaoru.

Wed Jan 15 10:40:22 2003  Gary Wong  <gtw@gnu.org>

	* NEWS, README: Updated in preparation for a 0.13 pre-release.
